fixed almost all bugs